kubernetes/gabernetes/apps/minio/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: minio
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: minio
            app.kubernetes.io/name: minio
            app.kubernetes.io/controller: minio
      toPorts:
        - ports:
            - port: "9000"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minio
  namespace: minio
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minio
      app.kubernetes.io/controller: minio
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9000"
